--- a/src/main/webapp/error/401.xhtml
+++ b/src/main/webapp/error/401.xhtml
@@ -6,7 +6,7 @@
                 template="/WEB-INF/template/main.xhtml">
 
     <ui:define name="content">
-        <f:loadBundle var="message" basename="goralczyk.maciej.entities.view.i18n.messages"/>
+        <f:loadBundle var="message" basename="goralczyk.maciej.errors.view.i18n.messages"/>
         <article class="">
             <header>
                 <h2>401 - #{message.unauthorized}</h2>
