--- a/src/main/webapp/tournament/tournament_edit.xhtml
+++ b/src/main/webapp/tournament/tournament_edit.xhtml
@@ -6,7 +6,7 @@
                 template="/WEB-INF/template/main.xhtml">
 
     <f:metadata>
-        <f:viewParam name="id" value="#{tournamentEditView.id}" required="true"/>
+        <f:viewParam name="id" value="#{tournamentEditView.tournamentId}" required="true"/>
         <f:viewAction action="#{tournamentEditView.init()}"/>
     </f:metadata>
 
